========================================
Change log for mod_reader
========================================

2023-03-23 (41)
 - make certain tools compatible with Moodle 4.x which uses question_versions table

2023-02-19 (40)
 - when showing user profile pictures on Moodle >= 3.11, use 

2023-02-18 (39)
 - fix permissions for displaying and acceessing the checkboxes on reports pages

2022-05-11 (38)
 - add message to CHANGES.txt

2022-05-11 (38)
 - compatability with Moodle 3.11: use /core_user/fields to get user name fields; user get_string('grade', 'grades')

2022-04-04 (37)
 - get 'grade' from 'grades' lang pack instead of 'moodle'

2022-02-24 (36)
 - replace used of 'groups' in SQL because it is a reserved word in MySQL 8

2021-09-14 (35)
 - modify markdown syntax for long help messages (for compatability with Moodle 3.11)

2021-06-28 (32)
 - : improve compatability wth PostgreSQL (1) use AVG function instead of (SUM / COUNT); (2) use single quotes when concatenating strings

2021-06-08 (31)
 - add missing level 11 to Reading Level menu for changereaderlevel action in admin.php

2020-07-27 (30)
 - fix tool to export Reader tables

2020-03-01 (29)
 - include current version in tool to redo upgrade

2020-02-05 (28)
 - fix import and export of attempts to include timestart/modified while maintaining backwards compatability with previous export files

2019-11-27 (27)
 - fix setting of quiz id when downloading books without quizzes on sites using the mreader.org API

2019-11-20 (26)
 - add 'Send message' action to 'Students (full)' and 'Books (full)' reports

2019-11-13 (25)
 - fix behavior of download button on 'Edit books (Site)' page

2019-11-11 (24)
 - remove unused declaration of global variables: $SESSION and $CFG

2019-11-08 (22)
 - standardize layout and spelling in CHANGES.txt

2019-11-08 (22)
 - when receiving quiz score from mreader API, update the image file name if necessary

2019-11-06 (21)